<resources>
    <string name="app_name">C-Dive</string>
    <string name="main_page">Main Page</string>
    <string name="button">Button</string>
    <string name="startgame">StartGame</string>
    <string name="setting">Setting</string>
    <string name="the_prohramming_geek">The prohramming geek</string>
    <string name="music">Music</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="button9">Button9</string>
    <string name="createaccount">CreateAccount</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="leaderboard">LeaderBoard</string>
    <string name="customise">Customise</string>
    <string name="home">Home</string>
    <string name="facebook_app_id">873081136477976</string>
    <string name="fb_login_protocol_scheme">fb873081136477976</string>

    <string name="share">Share</string>
    <string-array name="player_clothes">
        <item>Red</item>
        <item>Blue</item>
        <item>Purple</item>
    </string-array>

</resources>
